--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "vite": "^4.0.0"
   },
   "dependencies": {
+    "@dimforge/rapier3d": "^0.10.0",
     "postprocessing": "^6.29.1",
     "socket.io-client": "^4.5.4",
     "three": "^0.148.0"
